--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 <style>
 * { box-sizing: border-box; }
-
 body {
     margin: 0;
     background: black;
@@ -16,7 +15,6 @@ body {
     overflow: hidden;
     touch-action: none;
 }
-
 .screen {
     position: absolute;
     inset: 0;
@@ -26,7 +24,6 @@ body {
     justify-content: center;
     gap: 20px;
 }
-
 .active { display: flex; }
 
 /* ACCUEIL */
@@ -34,22 +31,18 @@ body {
     background: linear-gradient(to top, rgba(0,0,0,.7), rgba(0,0,0,.2)),
         url("https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?auto=format&fit=crop&w=1600&q=80") center/cover no-repeat;
 }
-
 #title { font-size: 42px; text-shadow: 0 0 15px white; }
-
 input, button {
     padding: 12px 20px;
     font-size: 18px;
     border-radius: 10px;
     border: none;
 }
-
 button {
     background: #2196f3;
     color: white;
     cursor: pointer;
 }
-
 #best { position: absolute; bottom: 40px; left: 20px; }
 #author { position: absolute; bottom: 10px; left: 20px; font-size: 14px; color: #aaa; }
 
@@ -60,20 +53,16 @@ button {
     gap: 10px;
     flex-direction: column;
 }
-
 #leaderboard-buttons {
     display: flex;
     gap: 10px;
     margin-bottom: 10px;
 }
-
 #leaderboard-buttons button {
     padding: 8px 16px;
     font-size: 16px;
 }
-
 #leaderboard-list { width: 320px; }
-
 .item {
     display: flex;
     justify-content: space-between;
@@ -81,7 +70,6 @@ button {
     margin: 6px 0;
     border-radius: 12px;
 }
-
 .gold { background: linear-gradient(90deg,#ffd700,#ffb300); color: black; }
 .silver { background: linear-gradient(90deg,#cfd8dc,#b0bec5); color: black; }
 .bronze { background: linear-gradient(90deg,#cd7f32,#a97142); color: black; }
@@ -90,7 +78,6 @@ button {
 
 /* JEU */
 #game-screen { background: black; overflow: hidden; }
-
 .star {
     position: absolute;
     width: 2px;
@@ -99,18 +86,14 @@ button {
     opacity: .8;
     pointer-events: none;
 }
-
 .rocket {
     position: absolute;
     bottom: 60px;
     width: 60px;
     height: 80px;
 }
-
 .rocket img { width: 100%; height: 100%; }
-
 .rock { position: absolute; pointer-events: none; }
-
 #score { position: absolute; top: 10px; left: 10px; font-size: 22px; }
 
 /* GAME OVER */
@@ -134,7 +117,6 @@ button {
     justify-content: space-between;
     padding: 0 20px;
 }
-
 #mobile-controls button {
     width: 80px;
     height: 80px;
@@ -169,16 +151,13 @@ button {
 
 <div id="game-screen" class="screen">
     <div id="score">Score : 0</div>
-
     <div class="rocket" id="rocket">
         <img src="Fusee.png" alt="Fusée">
     </div>
-
     <div id="mobile-controls">
         <button id="leftBtn">⬅️</button>
         <button id="rightBtn">➡️</button>
     </div>
-
     <div id="gameover">
         <h1>💥 VOUS AVEZ PERDU 💥</h1>
         <div id="finalScore"></div>
@@ -223,192 +202,120 @@ const firebaseConfig = {
 firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
 
-// Active leaderboard par défaut
-let currentLeaderboard = "season1"; // season1 ou alltime
+// Leaderboard actif
+let currentLeaderboard = "leaderboard_season1"; // saison par défaut
 
+// Envoi score
 async function sendScore(name, score) {
     try {
-        // Toujours envoyer dans all-time
+        // Ajoute toujours dans all-time
         await db.collection("leaderboard").add({
-            name, score,
-            date: firebase.firestore.FieldValue.serverTimestamp()
+            name, score, date: firebase.firestore.FieldValue.serverTimestamp()
         });
-        // Si saison 1 active, envoyer aussi dans season1
+        // Ajoute dans saison actuelle
         await db.collection("leaderboard_season1").add({
-            name, score,
-            date: firebase.firestore.FieldValue.serverTimestamp()
+            name, score, date: firebase.firestore.FieldValue.serverTimestamp()
         });
-    } catch(err) { console.error("Erreur en envoyant le score:", err); }
+    } catch (err) {
+        console.error(err);
+    }
 }
 
+// Récupération leaderboard
 async function fetchLeaderboard(collection) {
     try {
         const snapshot = await db.collection(collection)
-            .orderBy("score","desc")
+            .orderBy("score", "desc")
             .limit(10)
             .get();
-        const data = [];
+        let data = [];
         snapshot.forEach(doc => data.push(doc.data()));
         return data;
-    } catch(err) { console.error("Erreur leaderboard:", err); return []; }
+    } catch (err) {
+        console.error(err);
+        return [];
+    }
 }
 
-function displayLeaderboard(collection) {
-    fetchLeaderboard(collection).then(data => {
-        list.innerHTML = "";
-        for (let i = 0; i < 10; i++) {
-            let d = document.createElement("div");
-            if (data[i]) {
-                let cls = i==0?"gold":i==1?"silver":i==2?"bronze":"normal";
-                let medal = i==0?"🥇":i==1?"🥈":i==2?"🥉":"#"+(i+1);
-                d.className = "item "+cls;
-                d.innerHTML = `<span>${medal} ${data[i].name}</span><span>${data[i].score}</span>`;
-            } else {
-                d.className = "item empty";
-                d.innerHTML = `<span>#${i+1} — Libre</span><span>—</span>`;
-            }
-            list.appendChild(d);
+// Affichage leaderboard
+async function displayLeaderboard() {
+    list.innerHTML = "";
+    const data = await fetchLeaderboard(currentLeaderboard);
+    for (let i = 0; i < 10; i++) {
+        let d = document.createElement("div");
+        if (data[i]) {
+            let cls = i==0?"gold":i==1?"silver":i==2?"bronze":"normal";
+            let medal = i==0?"🥇":i==1?"🥈":i==2?"🥉":"#"+(i+1);
+            d.className = "item "+cls;
+            d.innerHTML = `<span>${medal} ${data[i].name}</span><span>${data[i].score}</span>`;
+        } else {
+            d.className = "item empty";
+            d.innerHTML = `<span>#${i+1} — Libre</span><span>—</span>`;
         }
-        switchScreen(leader);
-    });
+        list.appendChild(d);
+    }
+    switchScreen(leader);
 }
 
 // Boutons leaderboard
 function showSeasonLeaderboard() {
-    currentLeaderboard = "season1";
-    displayLeaderboard("leaderboard_season1");
+    currentLeaderboard = "leaderboard_season1";
+    displayLeaderboard();
 }
-
 function showAlltimeLeaderboard() {
-    currentLeaderboard = "alltime";
-    displayLeaderboard("leaderboard");
+    currentLeaderboard = "leaderboard";
+    displayLeaderboard();
 }
+function showLeaderboard() { showSeasonLeaderboard(); }
 
-function showLeaderboard() {
-    showSeasonLeaderboard();
-}
-
-// === GAME LOGIC ===
-
+/* ----- JEU ----- */
 function getHitbox(el, px, py) {
     const r = el.getBoundingClientRect();
-    return { left:r.left+px, right:r.right-px, top:r.top+py, bottom:r.bottom-py };
+    return { left: r.left+px, right: r.right-px, top: r.top+py, bottom: r.bottom-py };
 }
-
-const rocketSize = { width:60,height:80 };
+const rocketSize = { width: 60, height: 80 };
 const rockImages = [
-    {src:"Roche1.png",width:50,height:50},
-    {src:"Roche2.png",width:60,height:50},
-    {src:"Roche3.png",width:55,height:55},
-    {src:"Roche4.png",width:50,height:60},
-    {src:"Roche5.png",width:65,height:50},
+    {src:"Roche1.png", width:50,height:50},
+    {src:"Roche2.png", width:60,height:50},
+    {src:"Roche3.png", width:55,height:55},
+    {src:"Roche4.png", width:50,height:60},
+    {src:"Roche5.png", width:65,height:50},
 ];
-
-function spawnStars() {
-    stars.forEach(s=>s.remove()); stars=[];
-    for(let i=0;i<120;i++){
-        let s=document.createElement("div");
-        s.className="star";
-        s.style.left=Math.random()*innerWidth+"px";
-        s.style.top=Math.random()*innerHeight+"px";
-        game.appendChild(s);
-        stars.push(s);
-    }
-}
-
-function moveStars() {
-    stars.forEach(s=>{
-        let t=parseFloat(s.style.top);
-        t+=2;
-        if(t>innerHeight)t=0;
-        s.style.top=t+"px";
-    });
-    if(!gameOver) requestAnimationFrame(moveStars);
-}
-
-function loopScore() {
-    clearInterval(scoreInterval);
-    scoreInterval=setInterval(()=>{
-        if(gameOver)return;
-        score+=pointMultiplier;
-        scoreTxt.textContent="Score : "+score;
-        let thresholds=[100,250,500,1000];
-        if(score>=1500){
-            let extra=Math.floor((score-1500)/500);
-            for(let i=0;i<=extra;i++)thresholds.push(1500+i*500);
-        }
-        thresholds.forEach(t=>{
-            if(score>=t&&!activatedThresholds.has(t)){
-                activatedThresholds.add(t);
-                speedMultiplier*=2;
-                pointMultiplier*=2;
-                speed=baseSpeed*speedMultiplier;
-                spawnDelay=Math.max(120,800/speedMultiplier);
-            }
-        });
-    },250);
-}
-
+function spawnStars(){stars.forEach(s=>s.remove());stars=[];for(let i=0;i<120;i++){let s=document.createElement("div");s.className="star";s.style.left=Math.random()*innerWidth+"px";s.style.top=Math.random()*innerHeight+"px";game.appendChild(s);stars.push(s);}}
+function moveStars(){stars.forEach(s=>{let t=parseFloat(s.style.top);t+=2;if(t>innerHeight)t=0;s.style.top=t+"px";});if(!gameOver)requestAnimationFrame(moveStars);}
+function loopScore(){clearInterval(scoreInterval);scoreInterval=setInterval(()=>{if(gameOver)return;score+=pointMultiplier;scoreTxt.textContent="Score : "+score;let thresholds=[100,250,500,1000];if(score>=1500){let extra=Math.floor((score-1500)/500);for(let i=0;i<=extra;i++)thresholds.push(1500+i*500);}thresholds.forEach(t=>{if(score>=t&&!activatedThresholds.has(t)){activatedThresholds.add(t);speedMultiplier*=2;pointMultiplier*=2;speed=baseSpeed*speedMultiplier;spawnDelay=Math.max(120,800/speedMultiplier);}});},250);}
 let leftPressed=false,rightPressed=false;
-setInterval(()=>{
-    if(gameOver)return;
-    if(leftPressed)x-=6;
-    if(rightPressed)x+=6;
-    x=Math.max(0,Math.min(innerWidth-rocketSize.width,x));
-    rocket.style.left=x+"px";
-},16);
-
+setInterval(()=>{if(gameOver)return;if(leftPressed)x-=6;if(rightPressed)x+=6;x=Math.max(0,Math.min(innerWidth-rocketSize.width,x));rocket.style.left=x+"px";},16);
 document.addEventListener("keydown",e=>{if(e.key==="ArrowLeft")leftPressed=true;if(e.key==="ArrowRight")rightPressed=true;});
 document.addEventListener("keyup",e=>{if(e.key==="ArrowLeft")leftPressed=false;if(e.key==="ArrowRight")rightPressed=false;});
-
-["touchstart","mousedown"].forEach(ev=>{document.getElementById("leftBtn").addEventListener(ev,e=>{e.preventDefault();leftPressed=true});document.getElementById("rightBtn").addEventListener(ev,e=>{e.preventDefault();rightPressed=true})});
-["touchend","mouseup","mouseleave"].forEach(ev=>{document.getElementById("leftBtn").addEventListener(ev,()=>leftPressed=false);document.getElementById("rightBtn").addEventListener(ev,()=>rightPressed=false)});
+["touchstart","mousedown"].forEach(ev=>{document.getElementById("leftBtn").addEventListener(ev,e=>{e.preventDefault();leftPressed=true});document.getElementById("rightBtn").addEventListener(ev,e=>{e.preventDefault();rightPressed=true});});
+["touchend","mouseup","mouseleave"].forEach(ev=>{document.getElementById("leftBtn").addEventListener(ev,()=>leftPressed=false);document.getElementById("rightBtn").addEventListener(ev,()=>rightPressed=false);});
 
 function play(){
-    score=0;speedMultiplier=1;pointMultiplier=1;speed=baseSpeed;spawnDelay=800;activatedThresholds=new Set();
-    gameOver=false;x=innerWidth/2-rocketSize.width/2;rocket.style.left=x+"px";
-    scoreTxt.textContent="Score : 0"; gameover.style.display="none";
-    document.querySelectorAll(".rock").forEach(r=>r.remove());
-    rockIntervals.forEach(int=>clearInterval(int)); rockIntervals=[];
-    spawnStars(); moveStars(); switchScreen(game); loopScore(); spawnRock();
+    score=0;speedMultiplier=1;pointMultiplier=1;speed=baseSpeed;spawnDelay=800;activatedThresholds=new Set();gameOver=false;x=innerWidth/2-rocketSize.width/2;rocket.style.left=x+"px";
+    scoreTxt.textContent="Score : 0";gameover.style.display="none";document.querySelectorAll(".rock").forEach(r=>r.remove());rockIntervals.forEach(int=>clearInterval(int));rockIntervals=[];
+    spawnStars();moveStars();switchScreen(game);loopScore();spawnRock();
 }
-
 function spawnRock(){
     if(gameOver)return;
     let r=document.createElement("img");
     let type=rockImages[Math.floor(Math.random()*rockImages.length)];
-    r.src=type.src; r.className="rock"; r.style.width=type.width+"px"; r.style.height=type.height+"px";
-    r.style.left=Math.random()*(innerWidth-type.width)+"px"; r.style.top="-60px"; game.appendChild(r);
-
-    let fall=setInterval(()=>{
-        if(gameOver){r.remove();clearInterval(fall);return;}
+    r.src=type.src;r.className="rock";r.style.width=type.width+"px";r.style.height=type.height+"px";
+    r.style.left=Math.random()*(innerWidth-type.width)+"px";r.style.top="-60px";game.appendChild(r);
+    let fall=setInterval(()=>{if(gameOver){r.remove();clearInterval(fall);return;}
         r.style.top=parseInt(r.style.top)+speed+"px";
-        const rockBox=getHitbox(r,8,8); const rocketBox=getHitbox(rocket,14,12);
-        if(rockBox.bottom>rocketBox.top&&rockBox.top<rocketBox.bottom&&rockBox.left<rocketBox.right&&rockBox.right>rocketBox.left){
-            r.remove(); clearInterval(fall); endGame();
-        }
+        const rockBox=getHitbox(r,8,8),rocketBox=getHitbox(rocket,14,12);
+        if(rockBox.bottom>rocketBox.top && rockBox.top<rocketBox.bottom && rockBox.left<rocketBox.right && rockBox.right>rocketBox.left){r.remove();clearInterval(fall);endGame();}
         if(parseInt(r.style.top)>innerHeight){r.remove();clearInterval(fall);}
     },20);
-
-    rockIntervals.push(fall);
-    setTimeout(spawnRock,spawnDelay);
+    rockIntervals.push(fall);setTimeout(spawnRock,spawnDelay);
 }
-
-async function endGame(){
-    gameOver=true;
-    clearInterval(scoreInterval); rockIntervals.forEach(int=>clearInterval(int)); rockIntervals=[];
-    finalScore.textContent="Score : "+score;
-    await sendScore(pseudoInput.value||"Anonyme",score);
-    let best=localStorage.getItem("bestScore")||0;
-    if(score>best)localStorage.setItem("bestScore",score);
-    gameover.style.display="flex"; updateBest();
-}
-
-function updateBest(){ bestTxt.textContent="Meilleur score : "+(localStorage.getItem("bestScore")||0); }
-function goHome(){ switchScreen(home); }
-function switchScreen(s){ [home,game,leader].forEach(e=>e.classList.remove("active")); s.classList.add("active"); }
-
+async function endGame(){gameOver=true;clearInterval(scoreInterval);rockIntervals.forEach(int=>clearInterval(int));rockIntervals=[];finalScore.textContent="Score : "+score;await sendScore(pseudoInput.value||"Anonyme",score);let best=localStorage.getItem("bestScore")||0;if(score>best)localStorage.setItem("bestScore",score);gameover.style.display="flex";updateBest();}
+function updateBest(){bestTxt.textContent="Meilleur score : "+(localStorage.getItem("bestScore")||0);}
+function goHome(){switchScreen(home);}
+function switchScreen(s){[home,game,leader].forEach(e=>e.classList.remove("active"));s.classList.add("active");}
 </script>
+
 </body>
 </html>
 
