--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ button { background: #2196f3; color:white; cursor:pointer; }
 <div id="leaderboard-screen" class="screen">
     <h1>🏆 CLASSEMENT</h1>
     <div id="leaderboard-buttons">
-        <button onclick="showSeasonLeaderboard()">Saison 1</button>
+        <button onclick="showSeasonLeaderboard()">Saison</button>
         <button onclick="showAlltimeLeaderboard()">Tout le temps</button>
     </div>
     <div id="leaderboard-list"></div>
