--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ button { background: #2196f3; color:white; cursor:pointer; }
     <h1>🏆 CLASSEMENT</h1>
     <div id="leaderboard-buttons">
         <button onclick="showSeasonLeaderboard()">Saison</button>
-        <button onclick="showAlltimeLeaderboard()">Tout le temps</button>
+        <button onclick="showAlltimeLeaderboard()">Tout les temps</button>
     </div>
     <div id="leaderboard-list"></div>
     <button onclick="goHome()">Retour</button>
